--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,11 +1,10 @@
 doctype html
 html(lang='en')
 	head
+		title= data.title
 		meta(charset='utf-8')
-		meta(name='viewport', content='width=device-width, initial-scale=1')
-		meta(http-equiv='x-ua-compatible', content='ie=edge')
-		link(rel='stylesheet', href='//src.powerdd.com/libs/bootswatch/slate/bootstrap.min.css')
-		link(rel='stylesheet', href='/stylesheets/style.css')
+		meta(content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no', name='viewport')
+		link(rel='stylesheet', href='//src.powerdd.com/libs/adminlte/2.3.0/css/AdminLTE.css')
 		link(rel='shortcut icon', href='//src.powerdd.com/img/web/remaxthailand/favicon.ico', type='image/x-icon')
 		link(rel='icon', href='//src.powerdd.com/img/web/remaxthailand/favicon.ico', type='image/x-icon')
 
