--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,6 +4,8 @@ html(lang='en')
 		title= data.title
 		meta(charset='utf-8')
 		meta(content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no', name='viewport')
+		link(rel='stylesheet', href='//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css', )
+		link(rel='stylesheet', href='//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css')
 		link(rel='stylesheet', href='//src.powerdd.com/libs/adminlte/2.3.0/css/AdminLTE.css')
 		link(rel='shortcut icon', href='//src.powerdd.com/img/web/remaxthailand/favicon.ico', type='image/x-icon')
 		link(rel='icon', href='//src.powerdd.com/img/web/remaxthailand/favicon.ico', type='image/x-icon')
@@ -140,3 +142,6 @@ html(lang='en')
 			strong  Copyright &copy; 2015 
 				a(href="http://www.PowerDD.com") PowerDD
 			|  All rights reserved.
+		
+		script(src='//ajax.aspnetcdn.com/ajax/jQuery/jquery-2.1.4.min.js')
+		script(src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js')
