--- a/views/layout.jade
+++ b/views/layout.jade
@@ -32,9 +32,9 @@ html(lang='en')
 									|  #{__('Language')}
 								span.caret
 							ul.dropdown-menu(role="menu")
-								li(class=(data.memberInfo.Locale.substr(0,2) == 'th' ? 'active' : ''))
+								li(class=(data.memberInfo.locale.substr(0,2) == 'th' ? 'active' : ''))
 									a(href="javascript:void(0)") ภาษาไทย
-								li(class=(data.memberInfo.Locale.substr(0,2) == 'en' ? 'active' : ''))
+								li(class=(data.memberInfo.locale.substr(0,2) == 'en' ? 'active' : ''))
 									a(href="javascript:void(0)") English
 
 						li.dropdown.user.user-menu
