--- a/views/layout.jade
+++ b/views/layout.jade
@@ -141,3 +141,11 @@ html(lang='en')
 			strong  Copyright &copy; 2015 
 				a(href="http://www.PowerDD.com") PowerDD
 			|  All rights reserved.
+
+		script(src='//ajax.aspnetcdn.com/ajax/jQuery/jquery-2.1.4.min.js')
+		script(src='//ajax.aspnetcdn.com/ajax/bootstrap/3.3.4/bootstrap.min.js')
+		script(src='//cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js')
+		script(src='/javascripts/app.min.js')
+		script(src='/javascripts/common.js')
+		if (data.script != '')
+			script(src='#{data.script}')
