--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,9 +3,12 @@ html(lang='en')
 	head
 		title= data.title
 		meta(charset='utf-8')
-		meta(content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no', name='viewport')		
+		meta(content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no', name='viewport')
+		link(rel='stylesheet', href='//src.powerdd.com/libs/bootstrap/3.3.5/css/bootstrap.min.css')
+		link(rel='stylesheet', href='//src.powerdd.com/libs/font-awesome/4.4.0/css/font-awesome.min.css')
+		link(rel='stylesheet', href='//src.powerdd.com/libs/ionicons/2.0.1/css/ionicons.min.css')
 		link(rel='stylesheet', href='//src.powerdd.com/libs/adminlte/2.3.0/css/AdminLTE.css')
-		link(rel='stylesheet', href='/stylesheets/style.css')
+		link(rel='stylesheet', href='//src.powerdd.com/libs/adminlte/2.3.0/css/skins/skin-blue.min.css')
 		link(rel='shortcut icon', href='//src.powerdd.com/img/web/remaxthailand/favicon.ico', type='image/x-icon')
 		link(rel='icon', href='//src.powerdd.com/img/web/remaxthailand/favicon.ico', type='image/x-icon')
 
@@ -142,7 +145,8 @@ html(lang='en')
 				a(href="http://www.PowerDD.com") PowerDD
 			|  All rights reserved.
 
-		script(src='//ajax.aspnetcdn.com/ajax/jQuery/jquery-2.1.4.min.js')
-		script(src='//ajax.aspnetcdn.com/ajax/bootstrap/3.3.4/bootstrap.min.js')
+		script(src='//src.powerdd.com/libs/jquery/2.1.4/jquery.min.js')
+		script(src='//src.powerdd.com/libs/bootstrap/3.3.5/js/bootstrap.min.js')
 		script(src='//cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js')
+		script(src='//src.powerdd.com/libs/adminlte/2.3.0/js/app.min.js')
 		script(src='/javascripts/common.js')
