--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,7 @@
 doctype html
 html(lang='en')
 	head
-		title= data.title
+		title= data.title+' | PowerDD Backend'
 		meta(charset='utf-8')
 		meta(content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no', name='viewport')
 		link(rel='stylesheet', href='//src.powerdd.com/libs/bootstrap/3.3.5/css/bootstrap.min.css')
@@ -147,6 +147,6 @@ html(lang='en')
 
 		script(src='//src.powerdd.com/libs/jquery/2.1.4/jquery.min.js')
 		script(src='//src.powerdd.com/libs/bootstrap/3.3.5/js/bootstrap.min.js')
-		script(src='//cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js')
+		script(src='//src.powerdd.com/libs/jquery-cookie/1.4.1/jquery.cookie.min.js')
 		script(src='//src.powerdd.com/libs/adminlte/2.3.0/js/app.min.js')
 		script(src='/javascripts/common.js')
