--- a/views/layout.jade
+++ b/views/layout.jade
@@ -146,7 +146,8 @@ html(lang='en')
 			|  All rights reserved.
 
 		script(src='//src.powerdd.com/libs/jquery/2.1.4/jquery.min.js')
-		script(src='//src.powerdd.com/libs/bootstrap/3.3.5/js/bootstrap.min.js')
 		script(src='//src.powerdd.com/libs/jquery-cookie/1.4.1/jquery.cookie.min.js')
+		script(src='//src.powerdd.com/libs/angular/1.4.6/angular.min.js')
+		script(src='//src.powerdd.com/libs/bootstrap/3.3.5/js/bootstrap.min.js')
 		script(src='//src.powerdd.com/libs/adminlte/2.3.0/js/app.min.js')
 		script(src='/javascripts/common.js')
