--- a/views/login.jade
+++ b/views/login.jade
@@ -1,31 +1,56 @@
 doctype html
 html(lang='en', ng-app='PowerDD')
 	head
-		title= data.title+' | PowerDD Backend'
+		title= 'Sign in | PowerDD Backend'
 		meta(charset='utf-8')
 		meta(content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no', name='viewport')
 		link(rel='stylesheet', href='//src.powerdd.com/libs/bootstrap/3.3.5/css/bootstrap.min.css')
 		link(rel='stylesheet', href='//src.powerdd.com/libs/font-awesome/4.4.0/css/font-awesome.min.css')
 		link(rel='stylesheet', href='//src.powerdd.com/libs/ionicons/2.0.1/css/ionicons.min.css')
 		link(rel='stylesheet', href='//src.powerdd.com/libs/adminlte/2.3.0/css/AdminLTE.css')
-		link(rel='stylesheet', href='//src.powerdd.com/libs/adminlte/2.3.0/css/skins/skin-blue.min.css')
-		link(rel='shortcut icon', href='//src.powerdd.com/img/web/remaxthailand/favicon.ico', type='image/x-icon')
-		link(rel='icon', href='//src.powerdd.com/img/web/remaxthailand/favicon.ico', type='image/x-icon')
+		link(rel='stylesheet', href='/stylesheets/login.css')
+		link(rel='shortcut icon', href='favicon.ico', type='image/x-icon')
+		link(rel='icon', href='favicon.ico', type='image/x-icon')
 
-	body.skin-blue.sidebar-mini(ng-controller='Backend')
-		div.content-wrapper
-			section.content-header
-				h1 #{__('Screen Title - '+data.screen)}
-					small= data.titleDescription
-			section.content
-				xxxx
-
-		footer.main-footer
-			div.pull-right.hidden-xs  Version  
-				b 2.0
-			strong  Copyright &copy; 2015 
-				a(href="http://www.PowerDD.com") PowerDD
-			|  All rights reserved.
+	body.hold-transition.login-page.colorful
+		.login-box
+			.box.box-primary
+				.box-header.text-center.bg-light-blue
+					h3.box-title  Sign in
+				form(action='../../index2.html', method='post')
+					.form-group.has-feedback
+						input.form-control(type='email', placeholder='Email')
+						span.glyphicon.glyphicon-envelope.form-control-feedback
+					.form-group.has-feedback
+						input.form-control(type='password', placeholder='Password')
+						span.glyphicon.glyphicon-lock.form-control-feedback
+					.checkbox.pull-left
+						label
+							input#remember(type='checkbox')
+							|  คงอยู่ในระบบ
+					.btn-group.pull-right
+						span.btn.dropdown-toggle(data-toggle='dropdown')
+							i.fa.fa-globe
+							|  ภาษา 
+							span.caret
+						ul.dropdown-menu
+							li.active
+								a(href='javascript:void(0)') ภาษาไทย
+							li
+								a(href='/language/en') English						
+					.clearfix
+				.footer
+					#dv-info.callout.callout-info.margin-bottom-0.hidden
+						h4
+							i.fa.fa-comment
+							span.msg-header	สถานะการทำงาน
+						p
+							img.loading.top-2(src='/images/icons/loading.gif', alt='loading')
+							span.msg-detail
+					button#btn-login.btn.bg-light-blue.btn-block.for-hide(type='button') ลงชื่อเข้าใช้
+					p.for-hide
+						a(href='/forgot') ลืมรหัสผ่าน
+					a.for-hide.text-center(href='/register') สมัครสมาชิกใหม่
 
 		script(src='//src.powerdd.com/libs/jquery/2.1.4/jquery.min.js')
 		script(src='//src.powerdd.com/libs/jquery-cookie/1.4.1/jquery.cookie.min.js')
