--- a/views/login.jade
+++ b/views/login.jade
@@ -30,7 +30,7 @@ html(lang='en', ng-app='PowerDD')
 							|  คงอยู่ในระบบ
 					.btn-group.pull-right
 						span.btn.dropdown-toggle(data-toggle='dropdown')
-							i.fa.fa-globe
+							span.glyphicon.glyphicon-globe
 							|  ภาษา 
 							span.caret
 						ul.dropdown-menu
