--- a/views/login.jade
+++ b/views/login.jade
@@ -20,17 +20,17 @@ html(lang='en', ng-app='PowerDD')
 				form(action='../../index2.html', method='post')
 					.form-group.has-feedback
 						input.form-control(type='email', placeholder='Email')
-						span.glyphicon.glyphicon-envelope.form-control-feedback
+						span.fa.envelope.form-control-feedback
 					.form-group.has-feedback
 						input.form-control(type='password', placeholder='Password')
-						span.glyphicon.glyphicon-lock.form-control-feedback
+						span.fa.fa-lock.form-control-feedback
 					.checkbox.pull-left
 						label
 							input#remember(type='checkbox')
 							|  คงอยู่ในระบบ
 					.btn-group.pull-right
 						span.btn.dropdown-toggle(data-toggle='dropdown')
-							span.glyphicon.glyphicon-globe
+							i.fa.fa-globe
 							|  ภาษา 
 							span.caret
 						ul.dropdown-menu
