--- a/views/login.jade
+++ b/views/login.jade
@@ -6,7 +6,6 @@ html(lang='en', ng-app='PowerDD')
 		meta(content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no', name='viewport')
 		link(rel='stylesheet', href='//src.powerdd.com/libs/bootstrap/3.3.5/css/bootstrap.min.css')
 		link(rel='stylesheet', href='//src.powerdd.com/libs/font-awesome/4.4.0/css/font-awesome.min.css')
-		link(rel='stylesheet', href='//src.powerdd.com/libs/ionicons/2.0.1/css/ionicons.min.css')
 		link(rel='stylesheet', href='//src.powerdd.com/libs/adminlte/2.3.0/css/AdminLTE.css')
 		link(rel='stylesheet', href='/stylesheets/login.css')
 		link(rel='shortcut icon', href='favicon.ico', type='image/x-icon')
@@ -20,7 +19,7 @@ html(lang='en', ng-app='PowerDD')
 				form(action='../../index2.html', method='post')
 					.form-group.has-feedback
 						input.form-control(type='email', placeholder='Email')
-						span.fa.envelope.form-control-feedback
+						span.fa.fa-envelope.form-control-feedback
 					.form-group.has-feedback
 						input.form-control(type='password', placeholder='Password')
 						span.fa.fa-lock.form-control-feedback
