--- a/views/login.jade
+++ b/views/login.jade
@@ -30,7 +30,7 @@ html(lang='en', ng-app='PowerDD', ng-init="action = 'login'; header = 'ลงช
 					.btn-group.pull-right
 						span.btn.dropdown-toggle(data-toggle='dropdown')
 							i.fa.fa-globe
-							|  ภาษา 
+							| #{__('language')} 
 							span.caret
 						ul.dropdown-menu
 							li.active
