--- a/views/login.jade
+++ b/views/login.jade
@@ -18,7 +18,7 @@ html(lang='en', ng-app='PowerDD', ng-init="action = 'login'; header = 'ลงช
 					h3.box-title {{header}}
 				form(ng-hide="action != 'login'")
 					.form-group.has-feedback
-						input.form-control(type='email', placeholder='Email')
+						input.form-control(type='text', placeholder="#{__('username')}")
 						span.fa.fa-envelope.form-control-feedback
 					.form-group.has-feedback
 						input.form-control(type='password', placeholder='Password')
@@ -30,7 +30,7 @@ html(lang='en', ng-app='PowerDD', ng-init="action = 'login'; header = 'ลงช
 					.btn-group.pull-right
 						span.btn.dropdown-toggle(data-toggle='dropdown')
 							i.fa.fa-globe
-							| #{__('language')} 
+							|  #{__('language')}
 							span.caret
 						ul.dropdown-menu
 							li.active
