--- a/views/login.jade
+++ b/views/login.jade
@@ -21,7 +21,7 @@ html(lang='en', ng-app='PowerDD', ng-init="action = 'login'; header = 'ลงช
 						input.form-control(type='text', placeholder="#{__('username')}")
 						span.fa.fa-envelope.form-control-feedback
 					.form-group.has-feedback
-						input.form-control(type='password', placeholder='Password')
+						input.form-control(type='password', placeholder="#{__('password')}")
 						span.fa.fa-lock.form-control-feedback
 					.checkbox.pull-left
 						label
