--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,154 +1,149 @@
-doctype html
-html(lang='en', ng-app='PowerDD')
+doctype 5
+html
 	head
-		title= data.title+' | PowerDD Backend'
-		meta(charset='utf-8')
+		meta(charset='UTF-8')
+		title #{config.title} | Backend System
 		meta(content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no', name='viewport')
-		link(rel='stylesheet', href='//src.powerdd.com/libs/bootstrap/3.3.5/css/bootstrap.min.css')
-		link(rel='stylesheet', href='//src.powerdd.com/libs/font-awesome/4.4.0/css/font-awesome.min.css')
-		link(rel='stylesheet', href='//src.powerdd.com/libs/ionicons/2.0.1/css/ionicons.min.css')
-		link(rel='stylesheet', href='//src.powerdd.com/libs/adminlte/2.3.0/css/AdminLTE.css')
-		link(rel='stylesheet', href='//src.powerdd.com/libs/adminlte/2.3.0/css/skins/skin-blue.min.css')
-		link(rel='shortcut icon', href='//src.powerdd.com/img/web/remaxthailand/favicon.ico', type='image/x-icon')
-		link(rel='icon', href='//src.powerdd.com/img/web/remaxthailand/favicon.ico', type='image/x-icon')
+		link(rel='stylesheet', type='text/css', href='//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css')
+		link(rel='stylesheet', type='text/css', href='//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css')
+		link(rel='stylesheet', type='text/css', href='//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css')
+		link(rel='stylesheet', type='text/css', href='/stylesheets/AdminLTE.css')
+		link(rel='stylesheet', type='text/css', href='/stylesheets/style.css')
 
-	body.skin-blue.sidebar-mini(ng-controller='Backend')
-		.wrapper
-		header.main-header
-			a.logo(href="index2.html")
-				span.logo-mini
-					b  PDD
-				span.logo-lg
-					b PowerDD  
-					| Backend
-			
+		//if lt IE 9
+			script(src='//oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js')
+			script(src='//oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js')
+
+	body.skin-blue
+
+		input#apiUrl(type='hidden', value=config.apiUrl)
+		input#authKey(type='hidden', value=config.authKey)
+		input#role(type='hidden', value=info.memberType)
+		input#rolesMessage(type="hidden", value='{"administrator":"#{__('role-administrator')}", "dealer":"#{__('role-dealer')}", "developer":"#{__('role-developer')}", "guest":"#{__('role-guest')}", "headSale":"#{__('role-headSale')}", "manager":"#{__('role-manager')}", "member":"#{__('role-member')}", "officer":"#{__('role-officer')}", "sale":"#{__('role-sale')}"}')
+		input#language(type='hidden', value=config.language)
+		if permission.insert != ''
+			input#insertKey(type='hidden', value=permission.insert)
+		if permission.update != ''
+			input#updateKey(type='hidden', value=permission.update)
+		if permission.delete != ''
+			input#deleteKey(type='hidden', value=permission.delete)
+
+		img.hidden(src="https://www.dropbox.com/s/4kgsnilcrzed582/loading.gif?raw=1")
+		
+
+		header.header
+			a.logo(href='/') RemaxThailand
 			nav.navbar.navbar-static-top(role="navigation")
-				a.sidebar-toggle(href="#", data-toggle="offcanvas", role="button")
-					span.sr-only  Toggle navigation
-
-				div.navbar-custom-menu
+				a.navbar-btn.sidebar-toggle(href="#", data-toggle="offcanvas", role="button")
+					span.sr-only Toggle navigation
+					span.icon-bar
+					span.icon-bar
+					span.icon-bar
+				div.navbar-right
 					ul.nav.navbar-nav
-
-						li.dropdown
-							a.dropdown-toggle(href="#", data-toggle="dropdown")
-								span
-									|  #{__('Language')}
+									
+						li.dropdown.hidden-xs
+							a.dropdown-toggle(href="#", data-toggle="dropdown", role="button", aria-expanded="false") #{__('language')} 
 								span.caret
 							ul.dropdown-menu(role="menu")
-								li(class=(data.memberInfo.locale.substr(0,2) == 'th' ? 'active' : ''))
-									a(href="javascript:void(0)") ภาษาไทย
-								li(class=(data.memberInfo.locale.substr(0,2) == 'en' ? 'active' : ''))
-									a(href="javascript:void(0)") English
+								li(class="#{config.language == 'th' ? 'active' : ''}")
+									a(href="#{config.language == 'th' ? 'javascript:void(0)' : '/language/th'}", class="#{config.language == 'th' ? 'color-white' : ''}") #{__('languageThai')}
+								li(class="#{config.language == 'en' ? 'active' : ''}")
+									a(href="#{config.language == 'en' ? 'javascript:void(0)' : '/language/en'}", class="#{config.language == 'en' ? 'color-white' : ''}") #{__('languageEnglish')}
 
 						li.dropdown.user.user-menu
 							a.dropdown-toggle(href="#", data-toggle="dropdown")
-								img.user-image(src=(typeof data.memberInfo.Image != 'undefined' ? data.memberInfo.Image : "//src.powerdd.com/libs/adminlte/2.3.0/img/avatar5.png"), alt="User Image")
-								span.hidden-xs  #{data.memberInfo.DisplayName}
+								i.glyphicon.glyphicon-user
+								span #{info.name}
+									i.caret
 							ul.dropdown-menu
-								li.user-header
-									img.img-circle(src=(typeof data.memberInfo.Image != 'undefined' ? data.memberInfo.Image : "//src.powerdd.com/libs/adminlte/2.3.0/img/avatar5.png"), alt="User Image")
-									p
-										| #{data.memberInfo.DisplayName} - #{__('Member Type - '+data.memberInfo.SelectedMemberType)}
-										small #{__('Member since')} #{data.memberInfo.RegisterDate}
+								li.user-header.bg-light-blue
+									img.img-circle(src="/images/AdminLTE/avatar5.png", alt="User Image")
+									if info.firstname
+										p #{info.firstname} #{info.lastname}
+									else
+										p #{info.name}
+									small#memberRole #{__('role-'+info.memberType)}
 								li.user-footer
 									div.pull-left
-										a.btn.btn-default.btn-flat(href="#") #{__('Profile')}
+										if config.screen == 'member-profile'
+											a.btn.btn-default.btn-flat(href="javascript:void(0)", disabled) #{__('profile')}
+										else
+											a.btn.btn-default.btn-flat(href="/member/profile") #{__('profile')}
 									div.pull-right
-										a.btn-logout.btn.btn-default.btn-flat(href="javascript:void(0)") #{__('Sign out')}
+										a.btn.btn-default.btn-flat(href="/logout") #{__('logout')}
 
-		aside.main-sidebar
-			section.sidebar
-				div.user-panel
-					div.pull-left.image
-						img.img-circle(src=(typeof data.memberInfo.Image != 'undefined' ? data.memberInfo.Image : "//src.powerdd.com/libs/adminlte/2.3.0/img/avatar5.png"), alt="User Image")
-					div.pull-left.info
-						p
-							| #{data.memberInfo.DisplayName}
-						a(href="#")
-							i.fa.fa-user.text-success
-							| #{__('Member Type - '+data.memberInfo.SelectedMemberType)}
+		div.wrapper.row-offcanvas.row-offcanvas-left
+			aside.left-side.sidebar-offcanvas
+				section.sidebar
+					div.user-panel
+						div.pull-left.image
+							img.img-circle(src="/images/AdminLTE/avatar5.png", alt="User Image")
+						div.pull-left.info
+							p #{__('hello %s')}#{info.name}
+							a(href="/member/profile") 
+								i.fa.fa-user.text-success
+								&nbsp; #{__('role-'+info.memberType)}
+					form.sidebar-form(action="#", method="get")
+						div.input-group
+							input.form-control(type="text", name="q", placeholder="#{__('search')}...")
+							span.input-group-btn
+								button#search-btn.btn.btn-flat(type='submit', name='seach')
+									i.fa.fa-search
+					ul.sidebar-menu
+						for menu, key in config.menu
+							li(class="#{config.screen == key ? 'active' : ''} #{menu.hasChild ? 'treeview' : ''}", id="menu#{menu.link.replace(/\//g, '-')}")
+								a(href="#{menu.link}")
+									i(class="fa fa-#{menu.icon}") 
+									span &nbsp; #{__('screen-'+key+'-header')}
+									if menu.hasChild
+										|  &nbsp;
+										i.fa.fa-angle-left.pull-right
+										small.badge.pull-right.margin-right-5.hidden 0
+									else
+										small.badge.pull-right.hidden 0
+								if menu.hasChild
+									ul.treeview-menu
+										for subMenu, subKey in menu.child
+											li(id="subMenu#{subMenu.replace(/\//g, '-')}")
+												a(href="#{subMenu}")
+													i.fa.fa-angle-double-right 
+													span &nbsp; #{__('screen-'+subKey+'-header')}
+													small.badge.pull-right.hidden
 
-				form.sidebar-form(action="#", method="get")
-					div.input-group
-						input.form-control(type="text", name="q", placeholder="Search...")
-						span.input-group-btn
-							button.btn.btn-flat(type='submit', name='search')
-								i.fa.fa-search
+			aside.right-side
+				section.content-header
+					h1
+						&nbsp;#{config.title} 
+						small #{config.titleDesc}
 
-				ul.sidebar-menu
-					li.header  #{__('Shop')}
-					li(class=(data.screen === 'member' ? 'treeview active' : 'treeview'))
-						a(href="#")
-							i(class=(data.screen === 'member' ? 'fa fa-user text-aqua' : 'fa fa-user'))
-							span  #{__('Member')}
+					if config.screen != 'index'
+						ol.breadcrumb
+							li
+								a(href="/")
+									i.fa.fa-dashboard
+									&nbsp;#{__('home')}
+							li.active &nbsp;#{config.title}
 
-					li(class=(data.screen === 'product' || data.screen === 'category' || data.screen === 'brand' ? 'treeview active' : 'treeview'))
-						a(href="./category")
-							i(class=(data.screen === 'product' || data.screen === 'category' ? 'fa fa-cubes text-aqua' : 'fa fa-cubes'))
-							span  #{__('Product')}
-					li(class=(data.screen === 'cart' ? 'treeview active' : 'treeview'))
-						a(href="./cart")
-							i(class=(data.screen === 'cart' || data.screen === 'order' ? 'fa fa-shopping-cart text-aqua' : 'fa fa-shopping-cart'))
-							span  #{__('Order')}
-					li(class=(data.screen === 'shop' || data.screen === 'shop-config' ? 'treeview active' : 'treeview'))
-						a(href="#")
-							i(class=(data.screen === 'shop' || data.screen === 'shop-config' ? 'fa fa-home text-aqua' : 'fa fa-home'))
-							span  #{__('Shop')}
-							i.fa.fa-angle-left.pull-right
-						ul.treeview-menu
-							li(class=(data.screen === 'shop' ? 'active' : ''))
-								a(href="./shop")
-									i(class=(data.screen === 'shop' ? 'fa fa-circle-o text-yellow' : 'fa fa-circle-o'))
-									|  #{__('Shop')}
+				section.content
 
-							li(class=(data.screen === 'shop-config' ? 'active' : ''))
-								a(href="./shop-config")
-									i(class=(data.screen === 'shop-config' ? 'fa fa-circle-o text-yellow' : 'fa fa-circle-o'))
-									|  #{__('Configuration')}
-					li(class=(data.screen === 'dealer' ? 'treeview active' : 'treeview'))
-						a(href="./dealer")
-							i(class=(data.screen === 'dealer' ? 'fa fa-users text-aqua' : 'fa fa-users'))
-							span  #{__('Dealer')}
-					if data.memberInfo.SelectedMemberType == 'Officer'		
-						li(class=(data.screen === 'register-dealer' ? 'treeview active' : 'treeview'))
-							a(href="#")
-								i(class=(data.screen === 'register-dealer' ? 'fa fa-bar-chart-o text-aqua' : 'fa fa-bar-chart-o'))
-								span  #{__('screen-report-header')}
-								i.fa.fa-angle-left.pull-right
-							ul.treeview-menu
-								li(class=(data.screen === 'register-dealer' ? 'active' : ''))
-									a(href="./register-dealer")
-										i(class=(data.screen === 'register-dealer' ? 'fa fa-circle-o text-yellow' : 'fa fa-circle-o'))
-										|  #{__('register_dealer')}
-										
-						li(class=(data.screen === 'claim' ? 'treeview active' : 'treeview'))
-							a(href="#")
-								i(class=(data.screen === 'claim' ? 'fa fa-cubes text-aqua' : 'fa fa-cubes'))
-								span  #{__('Claim-System')}
-								i.fa.fa-angle-left.pull-right
-							ul.treeview-menu
-								li(class=(data.screen === 'claim' ? 'active' : ''))
-									a(href="./claim")
-										i(class=(data.screen === 'claim' ? 'fa fa-circle-o text-yellow' : 'fa fa-circle-o'))
-										|  #{__('Claim-Data')}
-		div.content-wrapper
-			section.content-header
-				h1 #{__('Screen Title - '+data.screen)}
-					small= data.titleDescription
-			section.content
-				block content
+					block content
 
-		footer.main-footer
-			div.pull-right.hidden-xs  Version  
-				b 2.0
-			strong  Copyright &copy; 2015 
-				a(href="http://www.PowerDD.com") PowerDD
-			|  All rights reserved.
+		script(src='//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js')
+		script(src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js')
 
-		script(src='//src.powerdd.com/libs/jquery/2.1.4/jquery.min.js')
-		script(src='//src.powerdd.com/libs/jquery-cookie/1.4.1/jquery.cookie.min.js')
-		script(src='//src.powerdd.com/libs/angular/1.4.6/angular.min.js')
-		script(src='//src.powerdd.com/libs/angular/ngStorage/0.3.9/ngStorage.min.js')
-		script(src='//src.powerdd.com/libs/bootstrap/3.3.5/js/bootstrap.min.js')
-		script(src='//src.powerdd.com/libs/adminlte/2.3.0/js/app.min.js')
-		script(src='/javascripts/common.js')
+		if (config.screen == 'product' || config.screen == 'cart')
+			script(src='/javascripts/plugins/lazyload/jquery.scrollstop.min.js')
+			script(src='/javascripts/plugins/scrollToFixed/jquery-scrolltofixed-min.js')
+			script(src='//cdnjs.cloudflare.com/ajax/libs/jquery.lazyload/1.9.1/jquery.lazyload.min.js')
+
+		if (config.screen == 'report-dealer')
+			script(src='/javascripts/plugins/jqueryKnob/jquery.knob.js')			
+			script(src='//cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js')
+			script(src='/javascripts/plugins/morris/morris.min.js')
+			script(src='/javascripts/plugins/sparkline/jquery.sparkline.min.js')
+			
+		script(src='/javascripts/AdminLTE/app.js')
+		script(src='/javascripts/app.js')
+		- if (locals.script)
+			script(src=script)
