--- a/views/login.jade
+++ b/views/login.jade
@@ -1,5 +1,5 @@
 doctype html
-html(lang='en', ng-app='PowerDD', ng-init="action = 'login'; header = 'ลงชื่อเข้าใช้'")
+html(lang='en', ng-app='PowerDD', ng-init="action = 'login'; header = '#{__('Sign in')}'")
 	head
 		title= '{{header}} | PowerDD Backend'
 		meta(charset='utf-8')
@@ -15,7 +15,7 @@ html(lang='en', ng-app='PowerDD', ng-init="action = 'login'; header = 'ลงช
 		.login-box
 			.box.box-primary
 				.box-header.text-center.bg-light-blue
-					h3.box-title {{header}}
+					h3.box-title(ng-cloak) {{header}}
 				form(ng-show="action == 'login'")
 					.form-group.has-feedback
 						input.form-control(type='text', placeholder="#{__('username')}")
