--- a/views/login.jade
+++ b/views/login.jade
@@ -15,7 +15,7 @@ html(lang='en', ng-app='PowerDD', ng-init="action = 'login'; header = '#{__('Sig
 		.login-box
 			.box.box-primary
 				.box-header.text-center.bg-light-blue
-					h3.box-title(ng-cloak) {{header}}
+					h3.box-title {{header}}
 				form(ng-show="action == 'login'")
 					.form-group.has-feedback
 						input.form-control(type='text', placeholder="#{__('username')}")
