--- a/views/login.jade
+++ b/views/login.jade
@@ -1,7 +1,7 @@
 doctype html
-html(lang='en', ng-app='PowerDD', ng-init="action = 'login'; header = '#{__('Sign in')}'")
+html(lang='en', ng-app='PowerDD', ng-init="action = 'login'")
 	head
-		title= '{{header}} | PowerDD Backend'
+		title= '#{__('Sign in')} บัญชี PowerDD | Backend System'
 		meta(charset='utf-8')
 		meta(content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no', name='viewport')
 		link(rel='stylesheet', href='//src.powerdd.com/libs/bootstrap/3.3.5/css/bootstrap.min.css')
@@ -15,7 +15,9 @@ html(lang='en', ng-app='PowerDD', ng-init="action = 'login'; header = '#{__('Sig
 		.login-box
 			.box.box-primary
 				.box-header.text-center.bg-light-blue
-					h3.box-title {{header}}
+					h3.box-title #{__('Sign in')}
+					h3.box-title.ng-hide(ng-cloak, ng-show="action == 'register'") #{__('Create account')}
+					h3.box-title.ng-hide(ng-cloak, ng-show="action == 'forgot'") #{__('Forgot password')}
 				form(ng-show="action == 'login'")
 					.form-group.has-feedback
 						input.form-control(type='text', placeholder="#{__('username')}")
@@ -81,11 +83,11 @@ html(lang='en', ng-app='PowerDD', ng-init="action = 'login'; header = '#{__('Sig
 					button#btn-register.btn.bg-light-blue.btn-block.ng-hide(type='button', ng-cloak, ng-hide="action != 'register'") #{__('Create account')}
 					button#btn-check.btn.bg-light-blue.btn-block.ng-hide(type='button', ng-cloak, ng-hide="action != 'forgot'") ตรวจสอบ
 					p.ng-hide(ng-cloak, ng-hide="action == 'login'")
-						a(href='javascript:', ng-click="action = 'login'; header = '#{__('Sign in')}'") #{__('Sign in')}
+						a(href='javascript:', ng-click="action = 'login'") #{__('Sign in')}
 					p(ng-hide="action == 'register'")
-						a(href='javascript:', ng-click="action = 'register'; header = '#{__('Create account')}'") #{__('Create account')}
+						a(href='javascript:', ng-click="action = 'register'") #{__('Create account')}
 					p(ng-hide="action == 'forgot'")
-						a(href='javascript:', ng-click="action = 'forgot'; header = '#{__('Forgot password')}'") #{__('Forgot password')}
+						a(href='javascript:', ng-click="action = 'forgot'") #{__('Forgot password')}
 
 		script(src='//src.powerdd.com/libs/jquery/2.1.4/jquery.min.js')
 		script(src='//src.powerdd.com/libs/jquery-cookie/1.4.1/jquery.cookie.min.js')
