--- a/views/login.jade
+++ b/views/login.jade
@@ -1,7 +1,7 @@
 doctype html
 html(lang='en', ng-app='PowerDD', ng-init="action = 'login'")
 	head
-		title= '#{__("Sign in")} บัญชี PowerDD | Backend System'
+		title= "#{__('Sign in')} บัญชี PowerDD | Backend System"
 		meta(charset='utf-8')
 		meta(content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no', name='viewport')
 		link(rel='stylesheet', href='//src.powerdd.com/libs/bootstrap/3.3.5/css/bootstrap.min.css')
