--- a/views/login.jade
+++ b/views/login.jade
@@ -21,10 +21,10 @@ html(lang='en', ng-app='PowerDD', ng-init="action = 'login'")
 				form(ng-show="action == 'login'")
 					.form-group.has-feedback
 						input#username.form-control(type='text', placeholder="#{__('username')} #{__('or')} #{__('email')} #{__('or')} #{__('Mobile Phone Number')}")
-						span.fa.fa-user.form-control-feedback
+						span.fa.fa-user
 					.form-group.has-feedback
 						input#password.form-control(type='password', placeholder="#{__('password')}")
-						span.fa.fa-lock.form-control-feedback
+						span.fa.fa-lock
 					.checkbox.pull-left
 						label
 							input#remember(type='checkbox')
@@ -41,34 +41,34 @@ html(lang='en', ng-app='PowerDD', ng-init="action = 'login'")
 								a(href="#{data.language == 'en' ? 'javascript:void(0)' : '/language/en'}") #{__('languageEnglish')}
 					.clearfix
 
-				form.ng-hide(ng-cloak, ng-show="action == 'register'")
+				form.ng-hide(name='formRegister', ng-cloak, ng-show="action == 'register'")
 					.form-group.has-feedback
 						input#username.form-control(type='text', placeholder="#{__('username')}", ng-minlength=2)
-						span.fa.fa-user.form-control-feedback
+						span.fa.fa-user
 					.form-group.has-feedback
 						input#mobile.form-control(type='text', placeholder="#{__('Mobile Phone Number')}", ng-pattern="/^\d+$/", ng-minlength=9, ng-maxlength=10, required)
-						span.fa.fa-phone-square.form-control-feedback
+						span.fa.fa-phone-square
 					.form-group.has-feedback
-						input#email.form-control(type='email', placeholder="#{__('email')}", ng-pattern="/^[_a-z0-9]+(\.[_a-z0-9]+)*@[a-z0-9-]+(\.[a-z0-9-]+)*(\.[a-z]{2,4})$/", required)
-						span.fa.fa-envelope.form-control-feedback
+						input#email.form-control(name='email', type='email', placeholder="#{__('email')}", ng-pattern="/^[_a-z0-9]+(\.[_a-z0-9]+)*@[a-z0-9-]+(\.[a-z0-9-]+)*(\.[a-z]{2,4})$/", required)
+						span.fa.fa-envelope
 					.form-group.has-feedback
 						input#password.form-control(type='password', placeholder="#{__('password')}")
-						span.fa.fa-lock.form-control-feedback
+						span.fa.fa-lock
 					.form-group.has-feedback
 						input#password2.form-control(type='password', placeholder="#{__('retype password')}")
-						span.fa.fa-lock.form-control-feedback
+						span.fa.fa-lock
 					.clearfix
 
 				form.ng-hide(ng-cloak, ng-show="action == 'forgot'")
 					.form-group.has-feedback
 						input#username.form-control(type='text', placeholder="#{__('username')} #{__('or')} #{__('email')} #{__('or')} #{__('Mobile Phone Number')}")
-						span.fa.fa-user.form-control-feedback
+						span.fa.fa-user
 					.form-group.has-feedback
 						input#question.form-control(type='text', placeholder="#{__('Question')}")
-						span.fa.fa-question-circle.form-control-feedback
+						span.fa.fa-question-circle
 					.form-group.has-feedback
 						input#answer.form-control(type='text', placeholder="#{__('Answer')}")
-						span.fa.fa-quote-right.form-control-feedback
+						span.fa.fa-quote-right
 					.clearfix
 
 				.footer
@@ -80,8 +80,10 @@ html(lang='en', ng-app='PowerDD', ng-init="action = 'login'")
 							img.loading.top-2(src='/images/icons/loading.gif', alt='loading')
 							span.msg-detail
 					button#btn-login.btn.bg-light-blue.btn-block(type='button', ng-hide="action != 'login'") #{__('Sign in')}
-					button#btn-register.btn.bg-light-blue.btn-block.ng-hide(type='button', ng-cloak, ng-hide="action != 'register'") #{__('Create account')}
+					button#btn-register.btn.bg-light-blue.btn-block.ng-hide(type='button', ng-cloak, ng-hide="action != 'register'", ng-disabled="formRegister.email.") #{__('Create account')}
 					button#btn-check.btn.bg-light-blue.btn-block.ng-hide(type='button', ng-cloak, ng-hide="action != 'forgot'") ตรวจสอบ
+					p
+						{{formRegister.email.$valid}}
 					p.ng-hide(ng-cloak, ng-hide="action == 'login'")
 						a(href='javascript:', ng-click="action = 'login'") #{__('Sign in')}
 					p(ng-hide="action == 'register'")
