--- a/views/login.jade
+++ b/views/login.jade
@@ -73,12 +73,16 @@ html(lang='en', ng-app='PowerDD', ng-init="action = 'login'; apiUrl = '#{config.
 
 				.footer
 					
-					.text-red.ng-hide(ng-cloak, ng-show="hasError == true")
-						h4.margin-top-0 {{errorHeader}}
-						p {{errorDetail}}
-						p.text-red.ng-hide(ng-cloak, ng-show="error == 'MBR0031'") #{__('Username already exists')}
-						p.text-red.ng-hide(ng-cloak, ng-show="error == 'MBR0051'") #{__('Mobile phone number already exists')}
-						p.text-red.ng-hide(ng-cloak, ng-show="error == 'MBR0061'") #{__('Email already exists')}
+					.text-center.ng-hide(ng-cloak, ng-show="hasError == true")
+						p.text-red.ng-hide(ng-cloak, ng-show="error == 'MBR0031'") 
+							i.fa.fa-warning  
+							|  #{__('Username already exists')}
+						p.text-red.ng-hide(ng-cloak, ng-show="error == 'MBR0051'") 
+							i.fa.fa-warning  
+							|  #{__('Mobile phone number already exists')}
+						p.text-red.ng-hide(ng-cloak, ng-show="error == 'MBR0061'") 
+							i.fa.fa-warning  
+							|  #{__('Email already exists')}
 
 					#dv-info.callout.callout-info.margin-bottom-0.hidden
 						h4
