--- a/views/login.jade
+++ b/views/login.jade
@@ -83,6 +83,9 @@ html(lang='en', ng-app='PowerDD', ng-init="action = 'login'; apiUrl = '#{config.
 						p.text-red.ng-hide(ng-cloak, ng-show="error == 'MBR0061'") 
 							i.fa.fa-warning  
 							|  #{__('Email already exists')}
+						p.text-red.ng-hide(ng-cloak, ng-show="error == 'MBR0032'") 
+							i.fa.fa-warning  
+							|  #{__('Invalid Username or Password')}
 
 					.text-center.text-green.ng-hide.fade-in-out(ng-cloak, ng-show="registerSuccess == true")
 						p
