--- a/views/login.jade
+++ b/views/login.jade
@@ -108,9 +108,9 @@ html(lang='en', ng-app='PowerDD', ng-init="action = 'login'; apiUrl = '#{config.
 
 					p.ng-hide(ng-cloak, ng-hide="action == 'login'")
 						a(href='javascript:', ng-click="action = 'login'") #{__('Sign in')}
-					p(ng-hide="action == 'register' || registerSuccess == true")
+					p(ng-hide="action == 'register' || registerSuccess == true || loginSuccess == true")
 						a(href='javascript:', ng-click="action = 'register'") #{__('Create account')}
-					p(ng-hide="action == 'forgot' || registerSuccess == true")
+					p(ng-hide="action == 'forgot' || registerSuccess == true || loginSuccess == true")
 						a(href='javascript:', ng-click="action = 'forgot'") #{__('Forgot password')}
 
 		script(src='//src.powerdd.com/libs/jquery/2.1.4/jquery.min.js')
